# pico-spotify-controller

./: .gitignore  CMakeLists.txt  README.md  display.c  display.h  pico-spotify-controller.c  pins.h  start_background.vbs  start_bridge.bat  touch.c  touch.h
host/: bridge.py  requirements.txt
